--- a/plonk/Cargo.toml
+++ b/plonk/Cargo.toml
@@ -26,7 +26,7 @@ futures = "0.3"
 hashbrown = "0.13.2"
 itertools = { workspace = true }
 jf-primitives = { path = "../primitives", default-features = false }
-jf-relation = { path = "../relation", default-features = false }
+mpc-relation = { path = "../relation", default-features = false }
 jf-utils = { path = "../utilities" }
 merlin = { version = "3.0.0", default-features = false }
 num-bigint = { version = "0.4", default-features = false }
@@ -66,7 +66,7 @@ std = [
     "downcast-rs/std",
     "itertools/use_std",
     "jf-primitives/std",
-    "jf-relation/std",
+    "mpc-relation/std",
     "jf-utils/std",
     "num-bigint/std",
     "rand_chacha/std",
@@ -78,7 +78,7 @@ parallel = [
     "ark-ec/parallel",
     "ark-poly/parallel",
     "jf-utils/parallel",
-    "jf-relation/parallel",
+    "mpc-relation/parallel",
     "jf-primitives/parallel",
     "dep:rayon",
 ]
