--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -37,7 +37,7 @@ displaydoc = { version = "0.2.3", default-features = false }
 espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0" }
 hashbrown = "0.13.1"
 itertools = { workspace = true, features = ["use_alloc"] }
-jf-relation = { path = "../relation", default-features = false }
+mpc-relation = { path = "../relation", default-features = false }
 jf-utils = { path = "../utilities" }
 merlin = { version = "3.0.0", default-features = false }
 num-bigint = { version = "0.4.3", default-features = false }
@@ -109,14 +109,14 @@ std = [
         "itertools/use_std",
         "rand_chacha/std",
         "jf-utils/std",
-        "jf-relation/std",
+        "mpc-relation/std",
 ]
 print-trace = ["ark-std/print-trace"]
 parallel = [
         "ark-ff/parallel",
         "ark-ec/parallel",
         "jf-utils/parallel",
-        "jf-relation/parallel",
+        "mpc-relation/parallel",
         "rayon",
 ]
 test-srs = []
