plonk: multiprover: proof-system: Use batch ops in third round

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ Cargo.lock
 .pre-commit-config.yaml
 .vscode
 
+# Profiling
+**/flamegraph.svg
+
 # Test coverage (grcov)
 default.profraw
 /.pre-commit-config.yaml
