--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,6 +4,7 @@ normalize_comments = true
 use_try_shorthand = true
 match_block_trailing_comma = true
 use_field_init_shorthand = true
+max_width = 100
 edition = "2018"
 condense_wildcard_suffixes = true
 imports_granularity = "Crate"
