--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -5,6 +5,7 @@ use_try_shorthand = true
 match_block_trailing_comma = true
 use_field_init_shorthand = true
 max_width = 100
+use_small_heuristics = "Max"
 edition = "2018"
 condense_wildcard_suffixes = true
 imports_granularity = "Crate"
